objects/vlocity_cmt__AdCreativeSizeType__c.object
<CustomObject>
    <description>The Ad Creative SizeType defines the size of the Ad Creative. Ex : 400 X 450</description>
    <fields>
        <fullName>vlocity_cmt__CoreId__c</fullName>
        <description>Displays the ID of the core object created when migrating custom data.</description>
        <label>Core Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Height__c</fullName>
        <label>Height</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__MediaType__c</fullName>
        <description>This captures the Type of the AdSpace SizeType.</description>
        <label>Media Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Digital Banner</fullName>
                </value>
                <value>
                    <fullName>Digital Video</fullName>
                </value>
                <value>
                    <fullName>TV</fullName>
                </value>
                <value>
                    <fullName>Radio</fullName>
                </value>
                <value>
                    <fullName>Print</fullName>
                </value>
                <value>
                    <fullName>Outdoor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__RunTime__c</fullName>
        <label>Run Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__UnitOfMeasure__c</fullName>
        <label>Unit of Measure</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pixels</fullName>
                </value>
                <value>
                    <fullName>Inches</fullName>
                </value>
                <value>
                    <fullName>mm</fullName>
                </value>
                <value>
                    <fullName>Seconds</fullName>
                </value>
                <value>
                    <fullName>Minutes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Width__c</fullName>
        <label>Width</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Ad Creative SizeType</label>
    <listViews>
        <fullName>vlocity_cmt__All</fullName>
        <columns>NAME</columns>
        <columns>vlocity_cmt__MediaType__c</columns>
        <columns>vlocity_cmt__Height__c</columns>
        <columns>vlocity_cmt__Width__c</columns>
        <columns>vlocity_cmt__UnitOfMeasure__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Ad Creative SizeTypes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>